tests/errors/type_assign_set_to_int.l26
{
    int x;
    set s;
    s = {1, 2, 3};
    x = s;          // type error: assigning a set to an int variable
    write x;
}
